--- a/src/app/adduser/adduser.component.html
+++ b/src/app/adduser/adduser.component.html
@@ -5,7 +5,7 @@
     <div class="form-group row">
       <label class="col-md-2">Name</label>
       <div class="col-md-10">
-        <input class="form form-border" type="text" value="" [(ngModel)]="Name">
+        <input class="form form-border" type="text" value="" [(ngModel)]="name">
       </div>
     </div>
 
